--- a/.github/workflows/deployment.stag.yml
+++ b/.github/workflows/deployment.stag.yml
@@ -1,4 +1,4 @@
-name: Staging deployment
+name: Staging Deployment
 
 on:
   push:
@@ -7,12 +7,46 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag bda-be:0.0.0
+    - uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PASS }}
+
+    - name: Build and push Docker image
+      run: |
+        docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/bda-be:latest
+        docker push ${{ secrets.DOCKER_USER }}/bda-be:latest
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Install SSH client
+      run: sudo apt-get update && sudo apt-get install -y openssh-client
+
+    - name: Copy SSH key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+
+    - name: Deploy to VPS
+      run: |
+        ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+          docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
+          docker pull ${{ secrets.DOCKER_USER }}/bda-be:latest
+          docker stop bda-be || true
+          docker rm bda-be || true
+          docker run -d --name bda-be -p 5000:8000 ${{ secrets.DOCKER_USER }}/bda-be:latest
+        EOF
