--- a/.github/workflows/deployment.stag.yml
+++ b/.github/workflows/deployment.stag.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    environment: staging
     runs-on: ubuntu-latest
 
     steps:
@@ -28,6 +29,7 @@ jobs:
         docker push ${{ secrets.DOCKER_USER }}/bda-be:latest
 
   deploy:
+    environment: staging
     needs: build
     runs-on: ubuntu-latest
 
