--- a/.github/workflows/deployment.stag.yml
+++ b/.github/workflows/deployment.stag.yml
@@ -52,6 +52,11 @@ jobs:
       run: |
           docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
           docker pull ${{ secrets.DOCKER_USER }}/bda-be:latest
-          docker stop bda-be || true
-          docker rm bda-be || true
+          if [ "$(docker ps -q -f name=bda-be)" ]; then
+            docker stop bda-be
+          fi
+
+          if [ "$(docker ps -a -q -f name=bda-be)" ]; then
+            docker rm bda-be
+          fi
           docker run -d --name bda-be -p 5000:8000 ${{ secrets.DOCKER_USER }}/bda-be:latest
