--- a/.github/workflows/deployment.stag.yml
+++ b/.github/workflows/deployment.stag.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/bda-be:latest
+       docker buildx build --platform linux/amd64 . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/bda-be:latest
         docker push ${{ secrets.DOCKER_USER }}/bda-be:latest
 
   deploy:
