--- a/.github/workflows/deployment.stag.yml
+++ b/.github/workflows/deployment.stag.yml
@@ -12,21 +12,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
+    - uses: actions/checkout@v4
+    
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASS }}
+        
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    - name: Build and push Docker image
-      run: |
-       docker buildx build --platform linux/amd64 . --tag ${{ secrets.DOCKER_USER }}/bda-be:latest
-        docker push ${{ secrets.DOCKER_USER }}/bda-be:latest
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64,linux/x86_64
+        push: true
+        tags: ${{ secrets.DOCKER_USER }}/bda-be:latest
+        
 
   deploy:
     environment: staging
